@@ -3099,6 +3099,13 @@ inclusion/exclusion of files works, and how to write patterns.</p>
       tracking for compilers that support this (jikes and classic)</td>
     <td align="center" valign="top">No</td>
   </tr>
+  <tr>
+    <td valign="top">failonerror</td> <td valign="top">
+        If set to false, the build will continue even if there are compilation errors. 
+        Defaults to true.
+    </td>
+    <td align="center" valign="top">No</td>
+  </tr>
 </table>
 
 <h3>Parameters specified as nested elements</h3>
@@ -4673,9 +4680,49 @@ initialization target.</p>
     <td valign="top"><b>Description</b></td>
     <td align="center" valign="top"><b>Required</b></td>
   </tr>
+  <tr> <td colspan="3"/> No parameters</td>
+  </tr>
 </table>
+
+<h3>Nested Elements</h3>
+The tstamp task supports a format nested element which allows a property to be
+given the current date and time in a given format. The date/time patterns are as defined in the Java 
+SimpleDateFormat class. 
+<p>
+
+<table width="60%" border="1" cellpadding="2" cellspacing="0">
+  <tr>
+    <td valign="top"><b>Attribute</b></td>
+    <td valign="top"><b>Description</b></td>
+    <td align="center" valign="top"><b>Required</b></td>
+  </tr>
+  <tr>
+    <td valign="top">property</td>
+    <td valign="top">
+        The property which is to receive the date/time string in the given pattern
+    </td>
+    <td align="center" valign="top">Yes</td>
+  </tr>
+  <tr>
+    <td valign="top">pattern</td>
+    <td valign="top">The date/time pattern to be used. The values are defined by the Java
+                     SimpleDateFormat class</td>
+    <td align="center" valign="top">Yes</td>
+  </tr>
+</table>
+
 <h3>Examples</h3>
+<p> Set the standard DSTAMP, TSTAMP and TODAY properties according to the formats above
 <pre>  &lt;tstamp/&gt;</pre>
+
+<p> As for the above example, set the standard properties and also set the property 
+&quot;TODAY_UK&quot; with the date/time pattern &quot;d MMM yyyy&quot;
+
+<pre>  &lt;tstamp&gt;
+    &lt;format property=&quot;TODAY_UK&quot; pattern=&quot;d MMMM yyyy&quot;&gt;
+  &lt;/tstamp&gt;
+</pre>
+
 <hr>
 <h2><a name="uptodate">Uptodate</a></h2>
 <h3>Description</h3>
